force-app/main/default/objects/z_ChildRelationship__c/z_ChildRelationship__c.object-meta.xml
<CustomObject>
    <description>Created by the Metadata API</description>
    <label>ChildRelation</label>
    <nameField>
        <displayFormat>R-{0000}</displayFormat>
        <label>ChildRelation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ChildRelations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>