force-app/main/default/objects/z_ChildRelationship__c/fields/childobjectname__c.field-meta.xml
<CustomField>
    <fullName>childobjectname__c</fullName>
    <label>Child SObject Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>