force-app/main/default/objects/z_ChildRelationship__c/fields/fieldname__c.field-meta.xml
<CustomField>
    <fullName>fieldname__c</fullName>
    <label>Filed Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>