force-app/main/default/objects/z_ChildRelationship__c/fields/isCascadeDelete__c.field-meta.xml
<CustomField>
    <fullName>isCascadeDelete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isCascadeDelete</label>
    <type>Checkbox</type>
</CustomField>