force-app/main/default/objects/z_ChildRelationship__c/fields/z_ChildSObjectDescription__c.field-meta.xml
<CustomField>
    <fullName>z_ChildSObjectDescription__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Child SObject</label>
    <referenceTo>z_SObjectDescription__c</referenceTo>
    <relationshipLabel>ChildRelations (z_ChildSObjectDescription)</relationshipLabel>
    <relationshipName>z_ChildRelationships1</relationshipName>
    <type>Lookup</type>
</CustomField>