force-app/main/default/objects/z_ChildRelationship__c/fields/z_ParentSObjectDescription__c.field-meta.xml
<CustomField>
    <fullName>z_ParentSObjectDescription__c</fullName>
    <label>Parent SObject</label>
    <referenceTo>z_SObjectDescription__c</referenceTo>
    <relationshipLabel>ChildRelations (z_ParentSObjectDescription)</relationshipLabel>
    <relationshipName>z_ChildRelationships</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>